fix empty space at bottom on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -7,14 +7,17 @@ body {
   color: $grey2;
 }
 
-body {
-  grid-template: auto minmax(20vh, auto) / auto;
+@media (min-width: $LARGE_WIDTH) {
+  body {
+    grid-template: auto minmax(20vh, auto) / auto;
+  }
 }
+
 
 body > .content-container {
   grid-column: 1 / 2;
   grid-row: 1 / 2;
-  margin-bottom: $NAVBAR_HEIGHT; // Mobile nav is at the bottom
+  margin-bottom: $NAVBAR_HEIGHT;
   z-index: 0;
 }
 
